[gd_scene load_steps=29 format=3 uid="uid://cpov2w102frwi"]

[ext_resource type="Script" path="res://environment/game.gd" id="1_o5uc8"]
[ext_resource type="Script" path="res://debug.gd" id="2_gy0tc"]
[ext_resource type="PackedScene" uid="uid://cba0pwoqdm6ec" path="res://environment/map_02.tscn" id="3_4kayp"]
[ext_resource type="Script" path="res://environment/spawner.gd" id="3_6ckml"]
[ext_resource type="Resource" uid="uid://c3g3oj1vrdd33" path="res://enemies/enemy.tres" id="3_8g0ug"]
[ext_resource type="Script" path="res://player/player_controller.gd" id="3_kf0iy"]
[ext_resource type="PackedScene" uid="uid://cm6yhcpxpi5hb" path="res://environment/map_03.tscn" id="4_3akru"]
[ext_resource type="Script" path="res://waves/round_generator.gd" id="4_8dpr5"]
[ext_resource type="Resource" uid="uid://cv55kpu34fvaw" path="res://enemies/fast_enemy.tres" id="4_e450d"]
[ext_resource type="Resource" uid="uid://dm85jpxprmxdw" path="res://enemies/strong_enemy.tres" id="5_h0452"]
[ext_resource type="Script" path="res://player/player_stats.gd" id="5_i2tho"]
[ext_resource type="PackedScene" uid="uid://r2n37fyl7il0" path="res://cards/instant/upgrade_card.tscn" id="5_my2td"]
[ext_resource type="PackedScene" uid="uid://b7jub3ots15lg" path="res://environment/map_04.tscn" id="5_rbd22"]
[ext_resource type="PackedScene" uid="uid://dxgmg0eg1m4qj" path="res://environment/map_01.tscn" id="6_aw7do"]
[ext_resource type="Script" path="res://player/card_pile.gd" id="6_xi7ey"]
[ext_resource type="Texture2D" uid="uid://2ccsh6g6wtrb" path="res://square.png" id="9_x773t"]
[ext_resource type="Script" path="res://player/draw_pile.gd" id="12_vj0g1"]
[ext_resource type="Theme" uid="uid://gic0gee2mxk" path="res://ui/hud_theme.tres" id="13_5gicx"]
[ext_resource type="PackedScene" uid="uid://drnbpouwoj8qu" path="res://ui/building_ui.tscn" id="15_gqs0b"]
[ext_resource type="Texture2D" uid="uid://dyhvtx2hnwwmt" path="res://circle.svg" id="16_1pcps"]
[ext_resource type="PackedScene" uid="uid://cocwcyl0dikt1" path="res://cards/building/explosive_sentry_card.tscn" id="19_1ashe"]
[ext_resource type="Script" path="res://player/player_arsenal.gd" id="19_csm32"]
[ext_resource type="PackedScene" uid="uid://c2yxk243y5y7c" path="res://cards/building/long_range_sentry.tscn" id="20_jx7aq"]
[ext_resource type="PackedScene" uid="uid://b2x21hwcwtc11" path="res://cards/building/pulsing_sentry_card.tscn" id="21_4lqim"]
[ext_resource type="Script" path="res://player/hand_pile.gd" id="21_tvpxn"]
[ext_resource type="PackedScene" uid="uid://8321hydj8qfj" path="res://cards/card_controller.tscn" id="23_7gl36"]

[sub_resource type="Resource" id="Resource_j7ep6"]
script = ExtResource("4_8dpr5")
enemy_pool = Array[Resource("res://enemies/enemy_wrapper.gd")]([ExtResource("3_8g0ug"), ExtResource("4_e450d"), ExtResource("5_h0452")])
budgets = Array[float]([10.0, 20.0, 35.0])
max_budget_noise = 4.0

[sub_resource type="LabelSettings" id="LabelSettings_irpsx"]
font_size = 80

[node name="game" type="Node2D"]
script = ExtResource("1_o5uc8")
maps = Array[PackedScene]([ExtResource("6_aw7do"), ExtResource("3_4kayp"), ExtResource("4_3akru"), ExtResource("5_rbd22")])
generator = SubResource("Resource_j7ep6")

[node name="main_camera" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="debug" type="Node2D" parent="."]
script = ExtResource("2_gy0tc")

[node name="spawner" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_6ckml")

[node name="player_controller" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_kf0iy")

[node name="tile_cursor" type="Sprite2D" parent="player_controller"]
visible = false
modulate = Color(1, 1, 1, 0.27451)
self_modulate = Color(0.619608, 1, 1, 1)
scale = Vector2(50, 50)
texture = ExtResource("9_x773t")

[node name="radius_cursor" type="Sprite2D" parent="player_controller"]
visible = false
modulate = Color(1, 1, 1, 0.27451)
texture = ExtResource("16_1pcps")

[node name="player_stats" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_i2tho")

[node name="draw_pile" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1920, 1600)
script = ExtResource("12_vj0g1")

[node name="discard_pile" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1920, -1600)
script = ExtResource("6_xi7ey")

[node name="delete_pile" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("6_xi7ey")

[node name="player_arsenal" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("19_csm32")
deck = Array[PackedScene]([ExtResource("19_1ashe"), ExtResource("20_jx7aq"), ExtResource("21_4lqim"), ExtResource("5_my2td")])

[node name="hand" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1920.0
offset_top = -1030.0
offset_right = 1920.0
offset_bottom = 1030.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
script = ExtResource("21_tvpxn")
card_controller_scene = ExtResource("23_7gl36")

[node name="building_ui" parent="." instance=ExtResource("15_gqs0b")]
visible = false
offset_left = -1920.0
offset_top = 680.0
offset_right = -1320.0
offset_bottom = 1080.0

[node name="hud" type="CanvasLayer" parent="."]

[node name="main" type="Control" parent="hud"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="pause_panel" type="Panel" parent="hud/main"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("13_5gicx")

[node name="pause_box" type="VBoxContainer" parent="hud/main/pause_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -143.5
offset_top = -72.5
offset_right = 156.5
offset_bottom = 77.5
grow_horizontal = 2
grow_vertical = 2

[node name="resume_button" type="Button" parent="hud/main/pause_panel/pause_box"]
unique_name_in_owner = true
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
theme = ExtResource("13_5gicx")
text = "Resume"

[node name="restart_button" type="Button" parent="hud/main/pause_panel/pause_box"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
theme = ExtResource("13_5gicx")
text = "Restart"

[node name="exit_button" type="Button" parent="hud/main/pause_panel/pause_box"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
theme = ExtResource("13_5gicx")
text = "Exit"

[node name="end_panel" type="Panel" parent="hud/main"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("13_5gicx")

[node name="end_screen_box" type="VBoxContainer" parent="hud/main/end_panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -100.0
offset_right = 300.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("13_5gicx")

[node name="win_lose_label" type="Label" parent="hud/main/end_panel/end_screen_box"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 2
text = "Win!"
label_settings = SubResource("LabelSettings_irpsx")
horizontal_alignment = 1
vertical_alignment = 1

[node name="next_button" type="Button" parent="hud/main/end_panel/end_screen_box"]
custom_minimum_size = Vector2(600, 200)
layout_mode = 2
theme = ExtResource("13_5gicx")
text = "Next"

[connection signal="battle_loaded" from="." to="player_arsenal" method="_on_game_battle_loaded"]
[connection signal="round_started" from="." to="spawner" method="_on_game_round_started"]
[connection signal="pressed" from="hud/main/pause_panel/pause_box/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="hud/main/pause_panel/pause_box/restart_button" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="hud/main/pause_panel/pause_box/exit_button" to="." method="_on_exit_button_pressed"]
[connection signal="tree_exiting" from="hud/main/pause_panel/pause_box/exit_button" to="." method="_on_exit_button_tree_exiting"]
[connection signal="pressed" from="hud/main/end_panel/end_screen_box/next_button" to="." method="_on_next_button_pressed"]
